force-app/main/default/objects/StockItem__c/StockItem__c.object-meta.xml
<CustomObject>
    <description>出入库明细记录</description>
    <label>Sell-in/out Item</label>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Stock Item名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sell-in/out Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>