force-app/main/default/objects/StockItem__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>if( ISPICKVAL(Type__c, &apos;In&apos;),  Quantity__c , if( ISPICKVAL(Type__c, &apos;Out&apos;),  -1 * Quantity__c , 0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>