force-app/main/default/objects/StockItem__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>