force-app/main/default/objects/StockItem__c/fields/DailyReport__c.field-meta.xml
<CustomField>
    <fullName>DailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>InventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>