force-app/main/default/objects/StockItem__c/fields/DailySales__c.field-meta.xml
<CustomField>
    <fullName>DailySales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Sales</label>
    <referenceTo>Retail_Number__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>InventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>