force-app/main/default/objects/StockItem__c/fields/GiftGrid__c.field-meta.xml
<CustomField>
    <fullName>GiftGrid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Grid</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>