force-app/main/default/objects/StockItem__c/fields/GoodsInOut__c.field-meta.xml
<CustomField>
    <fullName>GoodsInOut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoodsInOut</label>
    <referenceTo>GoodsInOut__c</referenceTo>
    <relationshipLabel>Sell-in/out Items</relationshipLabel>
    <relationshipName>Sell_in_out_Items</relationshipName>
    <type>Lookup</type>
</CustomField>