force-app/main/default/objects/StockItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>