force-app/main/default/objects/StockItem__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <inlineHelpText>More information about this item (reasons of Sell in/ out...)</inlineHelpText>
    <label>Remark</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>