force-app/main/default/objects/StockItem__c/listViews/Sell_out_records.listView-meta.xml
<ListView>
    <fullName>Sell_out_records</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>DailySales__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Remark__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>StockItem__c.ProductInventory</value>
    </filters>
    <label>Customer in/out</label>
</ListView>