force-app/main/default/objects/StockItem__c/listViews/Store_sell_out.listView-meta.xml
<ListView>
    <fullName>Store_sell_out</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>DailySales__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>StockItem__c.StoreStock</value>
    </filters>
    <label>Store in/out</label>
</ListView>